--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "Auth-Passport",
+  "name": "passportauth",
   "version": "1.0.0",
-  "description": "A sample for passport use.",
+  "description": "Authentication using Passport in Node JS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "debug": "^3.0.0",
     "ejs": "^2.5.7",
+    "events": "^1.1.1",
     "express": "^4.15.4",
-    "express-session": "^1.15.5",
-    "jade": "^1.11.0",
-    "method-override": "^2.3.9",
-    "mongoose": "^4.11.6",
-    "morgan": "^1.8.2",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
-    "static-favicon": "^2.0.0-alpha"
-  }
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "mongodb": "^2.2.31",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.0.1",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {}
 }
