--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "passportauth",
+  "name": "passportlocal",
   "version": "1.0.0",
-  "description": "Authentication using Passport in Node JS",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
-    "events": "^1.1.1",
     "express": "^4.15.4",
-    "fs": "0.0.1-security",
-    "http": "0.0.0",
-    "mongodb": "^2.2.31",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.0.1",
-    "url": "^0.11.0"
-  },
-  "devDependencies": {}
+    "express-session": "^1.15.5",
+    "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
+  }
 }
